added cart checkout and serch widget in catalog

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,6 +20,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "basketPrice": "Price",
+  "@basketPrice": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "createOrder": "Checkout",
+  "@createOrder": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "offersCount": "Goods quantity",
+  "@offersCount": {
+    "type": "text",
+    "placeholders": {}
+  },
   "favorites": "Favorites",
   "@favorites": {
     "type": "text",
