--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -20,6 +20,21 @@
     "type": "text",
     "placeholders": {}
   },
+  "basketPrice": "Цена",
+  "@basketPrice": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "createOrder": "Оформить заказ",
+  "@createOrder": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "offersCount": "Число товаров",
+  "@offersCount": {
+    "type": "text",
+    "placeholders": {}
+  },
   "favorites": "Избранное",
   "@favorites": {
     "type": "text",
