added product card page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -50,8 +50,8 @@
     "type": "text",
     "placeholders": {}
   },
-  "productCart": "Product card",
-  "@productCart": {
+  "productCard": "Product card",
+  "@productCard": {
     "type": "text",
     "placeholders": {}
   },
