--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -50,8 +50,8 @@
     "type": "text",
     "placeholders": {}
   },
-  "productCart": "Карточка товара",
-  "@productCart": {
+  "productCard": "Карточка товара",
+  "@productCard": {
     "type": "text",
     "placeholders": {}
   },
